# resomapper

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  acknowledgments.md  conf.py  credits.md  example.ipynb  first_steps.md  generated_files.md  handbook.md  handbook.rst  handbook_auto.md  index.md  make.bat  output_files.md  resomapper_intro.md
resomapper/: cli.py  file_system_functions.py  preprocessing.py  processing.py  resomapper.py  utils.py
resomapper/dwi/: adcm.py
resomapper/myrelax/: getT1TR.py  getT2T2star.py
tests/: test_resomapper.py
