[tool.poetry]
name = "resomapper"
version = "0.1.0"
description = "Pipeline for processing MR images and generating parametric maps."
authors = ["Biomedical-MR"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
